--- a/styles/layout.module.scss
+++ b/styles/layout.module.scss
@@ -21,7 +21,7 @@
 
       position: relative;
 
-      section {
+      >section {
 
          min-height: 100vh;
          flex: 1;
